--- a/style.css
+++ b/style.css
@@ -16,6 +16,44 @@ p {
 	
 }
 
+#top {
+	position: relative;
+}
+
+#logo {
+	position: relative;
+	float: left;
+	height: 90px;
+	width: 140px;
+	border: 5px solid blue;
+}
+
+#login {
+	position: relative;
+	float: left;
+	height: 30px;
+	width: 550px;
+	padding: 30px 0px;
+	border: 5px solid blue;
+}
+
+#middle { 
+	position: relative;
+	clear: left;
+}
+
+#decklist { 
+	position: relative;
+	float: left;
+	border: 5px solid blue;
+}
+
+#getdeck {
+	position: relative;
+	float: left;
+	border: 5px solid blue;
+}
+
 .line{
 	padding: 1px;
 }
