--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ p {
 #login {
 	position: relative;
 	float: left;
-	height: 30px;
+	height: 90px;
 	width: 550px;
-	padding: 30px 0px;
+	padding: 0px 0px;
 	border: 5px solid blue;
 }
 
@@ -48,7 +48,7 @@ p {
 	border: 5px solid blue;
 }
 
-#getdeck {
+#deckinfo {
 	position: relative;
 	float: left;
 	border: 5px solid blue;
