--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     margin:0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-	font-family: 'Droid Sans', sans-serif;
+    font-family: 'Droid Sans', sans-serif;
     /* Thanks to colorzilla.com/gradient-editor */
     background: #45484d;
     background: -moz-linear-gradient(top, #45484d 0%, #000000 100%);
@@ -18,7 +18,17 @@ body {
     background: linear-gradient(to bottom, #45484d 0%,#000000 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 );
 }
+div#about-content {
+    position:absolute;
+    top:160px;
+    color:#d4d4d4;
+    padding:20px;
+    font-family: 'Droid Sans', sans-serif;
+}
 
+div#about-content p {
+    text-indent:50px;
+}
 div.title {
     display:inline-block;
     width:100%;
@@ -53,7 +63,7 @@ div#header {
 }
 
 div#user-info {
-	z-index: 1;
+    z-index: 1;
     opacity:1;
     float:right;
     position:absolute;
@@ -71,7 +81,7 @@ div#user-info {
 }
 
 div#user-info span#username-display {
-	font-size:1.0em;
+    font-size:1.0em;
     font-weight:bold;
     color:#E4E4E4;
 }
@@ -79,7 +89,7 @@ div#user-info span#username-display {
 div#user-info span#logout-button {
     font-size:1.0em;
     font-weight:bold;
-	cursor: pointer;
+    cursor: pointer;
 }
 
 div#user-info span#logout-button:hover {
@@ -91,7 +101,7 @@ div#user-info span#logout-button:hover {
 div#user-info span#modify-user {
     font-size:1.0em;
     font-weight:bold;
-	cursor: pointer;
+    cursor: pointer;
 }
 
 div#user-info span#modify-user:hover {
@@ -135,7 +145,7 @@ div.dialog h2 {
 
 div.dialog
 {
-	z-index: 3;
+    z-index: 3;
     width:700px;
     height:210px;
     position: fixed;
@@ -180,7 +190,7 @@ div#deck-list {
     left:-280px;
 
     border-top-right-radius:25px;
-	border-bottom-right-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 
 div#deck-list:hover {
@@ -193,14 +203,14 @@ div#deck-list div.title {
 }
 
 div#deck-list div.scroll-pane {
-	overflow: auto;
-	height: 310px;
+    overflow: auto;
+    height: 310px;
 }
 
 div#deck-list ul {
     padding:0px;
     margin:0px;
-	/*height: 310px; /*310 for 10 items - each item 31px*/
+/*height: 310px; /*310 for 10 items - each item 31px*/
 }
 
 div#deck-list ul li {
@@ -212,7 +222,7 @@ div#deck-list ul li {
     padding-bottom:0px;
     text-align: center;
     border-bottom:solid;
-	cursor: pointer;
+    cursor: pointer;
 }
 
 div#deck-list ul li:hover {
@@ -220,21 +230,21 @@ div#deck-list ul li:hover {
 }
 
 div#deck-list div#create-deck {
-	font-family: 'Droid Sans', sans-serif;
+    font-family: 'Droid Sans', sans-serif;
     font-weight:bold;
     font-size:1.5em;
     color: #efefef;
-	text-align: center;
-	border-top: solid;
-	padding-bottom: 2px;
-	cursor: pointer;
+    text-align: center;
+    border-top: solid;
+    padding-bottom: 2px;
+    cursor: pointer;
 }
 
 div#wrapper {
-	width: 960px;
-	height: 768px;
-	margin: 0 auto;
-	position: relative;
+    width: 960px;
+    height: 768px;
+    margin: 0 auto;
+    position: relative;
 }
 
 div#card-viewer {
@@ -260,7 +270,7 @@ div#card-viewer div.nav {
     font-size:2em;
     display:table;
     position:float;
-	cursor: pointer;
+    cursor: pointer;
 }
 
 div#card-viewer div.nav:hover {
@@ -274,13 +284,13 @@ div#card-viewer div.vcenter {
 }
 
 div#card-viewer div#create-deck-from-list-form{
-	text-align: center;
-	vertical-align:middle;
-	font-size: .8em;	
+    text-align: center;
+    vertical-align:middle;
+    font-size: .8em;	
 }
 
 div#divlines {
-	position: absolute;
+    position: absolute;
 }
 
 div#card-viewer div#prev
@@ -340,136 +350,136 @@ div#card-viewer div#card-content-outer
 
 div#card-viewer div#option-list
 {
-	z-index: 0;
-	position: absolute;
-	width: 87%;
-	height: 6%;
-	left: 6%;
-	top: 93%;
-	vertical-align: center;
+    z-index: 0;
+    position: absolute;
+    width: 87%;
+    height: 6%;
+    left: 6%;
+    top: 93%;
+    vertical-align: center;
 }
 
 div#card-viewer div#image-division-options
 {
-	z-index: 0;
-	position: absolute;
-	width: 88%;
-	height: 6%;
-	left: 6%;
-	top: 93%;
-	vertical-align: center;
+    z-index: 0;
+    position: absolute;
+    width: 88%;
+    height: 6%;
+    left: 6%;
+    top: 93%;
+    vertical-align: center;
 }
 
 div#card-viewer div#top-bar
 {
-	position: absolute;
-	width: 88%;
-	height: 7%;
-	left: 6%;
-	top: 2%;
-	overflow: hidden;
+    position: absolute;
+    width: 88%;
+    height: 7%;
+    left: 6%;
+    top: 2%;
+    overflow: hidden;
 }
 
 div#card-viewer div#top-bar h2
 {
-	vertical-align: middle;
-	text-align: center;
-	font-size: 2em;
-	font-weight: bold;
-	color: #efefef;
-	padding: 0;
-	margin: 0;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: #efefef;
+    padding: 0;
+    margin: 0;
 }
 
 .line{
-	padding: 1px;
+    padding: 1px;
 }
 
 .box{
-	border-style: solid;
-	border-color: #000;
+    border-style: solid;
+    border-color: #000;
 }
 
 .image{
-	top: 0;
-	left: 0;
-	position: absolute;
+    top: 0;
+    left: 0;
+    position: absolute;
 }
 
 .textbox {
-	height: 100px;
-	width: 300px;
-	overflow: auto;
-	resize: none;
+    height: 100px;
+    width: 300px;
+    overflow: auto;
+    resize: none;
 }
 
 .smallbox {
-	height: 50px;
-	width: 200px;
-	overflow: auto;
-	resize: none;
+    height: 50px;
+    width: 200px;
+    overflow: auto;
+    resize: none;
 }
 
 .flashybutton {
-	cursor: pointer;
-	-moz-box-shadow:inset 0px 1px 0px 0px #636363;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #636363;
-	box-shadow:inset 0px 1px 0px 0px #636363;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #616161), color-stop(1, #000000) );
-	background:-moz-linear-gradient( center top, #616161 5%, #000000 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#616161', endColorstr='#000000');
-	background-color:#616161;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #3d3d3d;
-	display:inline-block;
-	color:#ffffff;
-	font-family:arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:4px 18px;
-	text-decoration:none;
-	text-shadow:1px 1px 0px #000000;
+    cursor: pointer;
+    -moz-box-shadow:inset 0px 1px 0px 0px #636363;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #636363;
+    box-shadow:inset 0px 1px 0px 0px #636363;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #616161), color-stop(1, #000000) );
+    background:-moz-linear-gradient( center top, #616161 5%, #000000 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#616161', endColorstr='#000000');
+    background-color:#616161;
+    -moz-border-radius:6px;
+    -webkit-border-radius:6px;
+    border-radius:6px;
+    border:1px solid #3d3d3d;
+    display:inline-block;
+    color:#ffffff;
+    font-family:arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:4px 18px;
+    text-decoration:none;
+    text-shadow:1px 1px 0px #000000;
 }.flashybutton:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #000000), color-stop(1, #616161) );
-	background:-moz-linear-gradient( center top, #000000 5%, #616161 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#616161');
-	background-color:#000000;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #000000), color-stop(1, #616161) );
+    background:-moz-linear-gradient( center top, #000000 5%, #616161 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#616161');
+    background-color:#000000;
 }.flashybutton:active {
-	position:relative;
-	top:1px;
+    position:relative;
+    top:1px;
 }
 /* This imageless css button was generated by CSSButtonGenerator.com */
 
 .smallbutton {
-	cursor: pointer;
-	-moz-box-shadow:inset 0px 1px 0px 0px #636363;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #636363;
-	box-shadow:inset 0px 1px 0px 0px #636363;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #616161), color-stop(1, #000000) );
-	background:-moz-linear-gradient( center top, #616161 5%, #000000 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#616161', endColorstr='#000000');
-	background-color:#616161;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #3d3d3d;
-	display:inline-block;
-	color:#ffffff;
-	font-family:arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:2px 10px;
-	text-decoration:none;
-	text-shadow:1px 1px 0px #000000;
+    cursor: pointer;
+    -moz-box-shadow:inset 0px 1px 0px 0px #636363;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #636363;
+    box-shadow:inset 0px 1px 0px 0px #636363;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #616161), color-stop(1, #000000) );
+    background:-moz-linear-gradient( center top, #616161 5%, #000000 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#616161', endColorstr='#000000');
+    background-color:#616161;
+    -moz-border-radius:6px;
+    -webkit-border-radius:6px;
+    border-radius:6px;
+    border:1px solid #3d3d3d;
+    display:inline-block;
+    color:#ffffff;
+    font-family:arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:2px 10px;
+    text-decoration:none;
+    text-shadow:1px 1px 0px #000000;
 }.smallbutton:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #000000), color-stop(1, #616161) );
-	background:-moz-linear-gradient( center top, #000000 5%, #616161 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#616161');
-	background-color:#000000;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #000000), color-stop(1, #616161) );
+    background:-moz-linear-gradient( center top, #000000 5%, #616161 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#616161');
+    background-color:#000000;
 }.smallbutton:active {
-	position:relative;
-	top:1px;
+    position:relative;
+    top:1px;
 }
 /* This imageless css button was generated by CSSButtonGenerator.com */
